make gradle run hcscld tests
SVN: 32068